# JovialCoffee

./: .gitignore  README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
j2c/: build.gradle.kts
j2c/native/: CMakeLists.txt  build.gradle.kts
j2c/native/src/: lib.cpp
jastgen/: build.gradle.kts
kna/: build.gradle.kts
kna/native/: CMakeLists.txt
kna/native/src/: lib.cpp
native/: CMakeLists.txt  build.gradle
native/src/: ast.hpp  codegen.cpp  lib.cpp
src/main/cpp/: j2c.cpp
src/main/java/org/j2c/assembly/: NBoolean.java  NByte.java  NChar.java  NDouble.java  NFloat.java  NInt.java  NLong.java  NShort.java
src/main/java/org/j2c/ast/: NBoolean.java  NByte.java  NChar.java  NDouble.java  NFloat.java  NInt.java  NLong.java  NShort.java
src/main/java/org/j2c/llvm/: LLVM.java
src/main/kotlin/org/j2c/: main.kt  utils.kt
src/main/kotlin/org/j2c/assembly/: ast.kt
src/main/kotlin/org/j2c/ast/: ControlFlowNode.kt  NAThrow.kt  NArrayAssignment.kt  NArrayLength.kt  NArrayReference.kt  NAssignment.kt  NBinOp.kt  NBoundAssignment.kt  NBoundReference.kt  NCall.kt  NClass.kt  NFieldDeclaration.kt  NIf.kt  NLoop.kt  NNew.kt  (+14 more)
src/main/native/: Cargo.toml  build.rs
src/main/native/include/: j2c.h
src/main/native/src/: ast.rs  j2c.cpp  lib.rs
src/main/native/src/parsing/: arrays.rs  binop.rs  bound_vars.rs  calls.rs  class.rs  control_flow.rs  jumps.rs  local_vars.rs  members.rs  mod.rs  new.rs  node.rs  not.rs  other.rs  primitives.rs  static_vars.rs
src/test/kotlin/org/j2c/: lang_test.kt  test.kt
src/test/resources/org/j2c/: DummyClass.java  DummyDependentClass.java  DummyLoopClass.java
(+185 files in other folders)
